[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet"
version = "2.1.9"
description = "TIBET - Humotica trust-system profile installer: zero-state, continuity, network, operator, observability, AI governance, firewall, evidence, compliance, agents, and conformance."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Jasper van de Meent", email = "jasper@humotica.com" },
    { name = "Root AI", email = "root_idd@humotica.nl" }
]
keywords = [
    "tibet", "audit", "provenance", "compliance", "ai-governance",
    "trust", "ai-act", "nis2", "gdpr", "security", "cli",
    "microvm", "isolation", "snaft", "firewall", "mux", "ainternet"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance"
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    # Bootstrap-or-die pair: even the meta-installer itself depends on
    # the central OSAPI substrate (tibet-core for provenance + jis-core
    # for identity). Every package the user ends up installing through
    # tibet[*] expects these to already be present.
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
]

[project.optional-dependencies]
# Individual components kept for explicit installs.
audit = ["tibet-audit>=0.27.1"]
forge = ["tibet-forge>=0.7.1"]
vault = ["tibet-vault>=0.1.0"]
genesis = ["tibet-genesis>=0.1.4"]
cmail = ["tibet-cmail>=0.3.0"]

# T-1 / bootstrap / identity-first. This is the smallest coherent runtime
# substrate: provenance + identity + genesis + causal time.
zero-state = [
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
    "tibet-genesis>=0.1.4",
    "tibet-timevector>=0.1.0",
]

# Continuity / resume / causal state.
continuity = [
    "tibet-continuityd>=0.6.17",
    "tibet-cap-bus>=0.1.4",
    "tibet-cbom>=0.2.2",
    "tibet-trail>=0.1.1",
    "tibet-wayback>=0.2.1",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
]

# Network primitives. Niche enterprise interop stays out of this default lane.
network = [
    "tibet-ping>=0.3.4",
    "tibet-overlay>=0.1.2",
    "tibet-mux>=1.0.2",
    "tibet-nc>=0.1.2",
    "tibet-mesh>=0.1.0",
    "tibet-zip>=1.1.1",
]

# Human/operator surface.
operator = [
    "tibet-pol>=0.3.4",
    "tibet-tail>=0.2.1",
    "tibet-cmail>=0.3.0",
    "tibet-keychain>=0.1.2",
    "tibet-home-agent>=0.5.3",
]

# Observability and cascade logging. Tail/trail/ping/pol are sensors; cascade is
# the causal correlation cockpit across JIS, TIBET, cap-bus, network,
# continuity, Phantom and evidence lanes.
observability = [
    "tibet-cascade>=0.1.1",
    "tibet-tail>=0.2.1",
    "tibet-trail>=0.1.1",
    "tibet-ping>=0.3.4",
    "tibet-pol>=0.3.4",
]

# AI governance / trust controls.
ai-governance = [
    "tibet-airlock>=0.3.1",
    "tibet-triage>=0.5.2",
    "tibet-claw>=0.3.2",
    "tibet-cortex>=0.2.1",
    "tibet-sam>=0.1.0",
]

# Semantic firewall and active security boundary. SNAFT is a first-class lane,
# not hidden inside the generic governance bundle.
firewall = [
    "snaft>=1.4.1",
    "tibet-snaft>=1.4.1",
    "inject-bender>=0.3.1",
]

# Security profile: governance controls + firewall + boundary gateways.
security = [
    "tibet-airlock>=0.3.1",
    "tibet-triage>=0.5.2",
    "tibet-claw>=0.3.2",
    "tibet-cortex>=0.2.1",
    "tibet-sam>=0.1.0",
    "snaft>=1.4.1",
    "tibet-snaft>=1.4.1",
    "inject-bender>=0.3.1",
    "tibet-pqc>=0.1.1",
    "tibet-gateway>=0.4.0",
]

# Evidence, audit, dossier, replay.
evidence = [
    "tibet-audit>=0.27.1",
    "tibet-sbom>=0.2.1",
    "tibet-cbom>=0.2.2",
    "tibet-ai-sbom>=0.2.3",
    "tibet-report>=0.1.2",
    "tibet-wayback>=0.2.1",
    "tibet-trail>=0.1.1",
]

# Compliance domains. Keep compliance/framework packages explicit and separate
# from evidence primitives.
compliance = [
    "tibet-nis2>=0.1.1",
    "tibet-ci>=0.2.1",
    "tibet-soc>=0.1.1",
    "tibet-workload>=0.1.0",
]

# Agent communication, AInternet, MCP surfaces and session resume.
agent = [
    "ainternet>=0.9.2",
    "ipoll>=0.2.6",
    "tibet-ainternet-mcp>=0.5.7",
    "tibet-ipoll-mcp>=0.1.0",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-context>=0.2.2",
]

# Standards, vectors and conformance helpers.
conformance = [
    "tibet-conformance-vectors>=0.2.2",
    "tibet-triage-mcp>=0.1.0",
    "tibet-pol-mcp>=0.1.0",
]

# Optional enterprise interop and niche compatibility lanes. These are not part
# of full because they target specific environments instead of the common spine.
interop = [
    "tibet-spiffe>=0.1.1",
    "tibet-edge>=0.1.1",
]

tooling = [
    "tibet-tools>=0.1.1",
    "tibet-marketplace>=0.1.1",
]

legacy = [
    "tibet-snap>=0.1.3",
    "tibet-cobol>=0.1.1",
    "tibet-y2k38>=0.1.2",
    "tibet-anticheat>=0.1.2",
    "tibet-router>=0.1.2",
    "tibet-iot>=0.1.1",
]

# Backwards-compatible aliases for earlier install docs.
core = [
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
    "tibet-genesis>=0.1.4",
    "tibet-timevector>=0.1.0",
]

daemon = [
    "tibet-continuityd>=0.6.17",
    "tibet-cap-bus>=0.1.4",
    "tibet-cbom>=0.2.2",
    "tibet-trail>=0.1.1",
    "tibet-wayback>=0.2.1",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
]

agentic = [
    "ainternet>=0.9.2",
    "ipoll>=0.2.6",
    "tibet-ainternet-mcp>=0.5.7",
    "tibet-ipoll-mcp>=0.1.0",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-context>=0.2.2",
]

safety = [
    "tibet-airlock>=0.3.1",
    "tibet-triage>=0.5.2",
    "tibet-claw>=0.3.2",
    "tibet-cortex>=0.2.1",
    "tibet-sam>=0.1.0",
    "snaft>=1.4.1",
    "tibet-snaft>=1.4.1",
    "inject-bender>=0.3.1",
    "tibet-pqc>=0.1.1",
    "tibet-gateway>=0.4.0",
]

# User-facing install profiles.
minimal = [
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
    "tibet-genesis>=0.1.4",
    "tibet-timevector>=0.1.0",
]

runtime = [
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
    "tibet-genesis>=0.1.4",
    "tibet-timevector>=0.1.0",
    "tibet-continuityd>=0.6.17",
    "tibet-cap-bus>=0.1.4",
    "tibet-cbom>=0.2.2",
    "tibet-trail>=0.1.1",
    "tibet-wayback>=0.2.1",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-ping>=0.3.4",
    "tibet-overlay>=0.1.2",
    "tibet-mux>=1.0.2",
    "tibet-nc>=0.1.2",
    "tibet-mesh>=0.1.0",
    "tibet-zip>=1.1.1",
    "tibet-pol>=0.3.4",
    "tibet-tail>=0.2.1",
    "tibet-cascade>=0.1.1",
    "tibet-cmail>=0.3.0",
    "tibet-keychain>=0.1.2",
    "tibet-home-agent>=0.5.3",
]

governed-ai = [
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
    "tibet-genesis>=0.1.4",
    "tibet-timevector>=0.1.0",
    "tibet-airlock>=0.3.1",
    "tibet-triage>=0.5.2",
    "tibet-claw>=0.3.2",
    "tibet-cortex>=0.2.1",
    "tibet-sam>=0.1.0",
    "snaft>=1.4.1",
    "tibet-snaft>=1.4.1",
    "inject-bender>=0.3.1",
    "ainternet>=0.9.2",
    "ipoll>=0.2.6",
    "tibet-ainternet-mcp>=0.5.7",
    "tibet-ipoll-mcp>=0.1.0",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-context>=0.2.2",
    "tibet-audit>=0.27.1",
    "tibet-sbom>=0.2.1",
    "tibet-cbom>=0.2.2",
    "tibet-ai-sbom>=0.2.3",
    "tibet-wayback>=0.2.1",
    "tibet-report>=0.1.2",
    "tibet-trail>=0.1.1",
]

enterprise = [
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
    "tibet-genesis>=0.1.4",
    "tibet-timevector>=0.1.0",
    "tibet-continuityd>=0.6.17",
    "tibet-cap-bus>=0.1.4",
    "tibet-cbom>=0.2.2",
    "tibet-trail>=0.1.1",
    "tibet-wayback>=0.2.1",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-ping>=0.3.4",
    "tibet-overlay>=0.1.2",
    "tibet-mux>=1.0.2",
    "tibet-nc>=0.1.2",
    "tibet-mesh>=0.1.0",
    "tibet-zip>=1.1.1",
    "tibet-pol>=0.3.4",
    "tibet-tail>=0.2.1",
    "tibet-cascade>=0.1.1",
    "tibet-cmail>=0.3.0",
    "tibet-keychain>=0.1.2",
    "tibet-home-agent>=0.5.3",
    "tibet-airlock>=0.3.1",
    "tibet-triage>=0.5.2",
    "tibet-claw>=0.3.2",
    "tibet-cortex>=0.2.1",
    "tibet-sam>=0.1.0",
    "snaft>=1.4.1",
    "tibet-snaft>=1.4.1",
    "inject-bender>=0.3.1",
    "tibet-pqc>=0.1.1",
    "tibet-gateway>=0.4.0",
    "tibet-audit>=0.27.1",
    "tibet-sbom>=0.2.1",
    "tibet-ai-sbom>=0.2.3",
    "tibet-report>=0.1.2",
    "tibet-nis2>=0.1.1",
    "tibet-ci>=0.2.1",
    "tibet-soc>=0.1.1",
    "tibet-workload>=0.1.0",
]

# Supported full profile. Deprecated aliases, legacy demos, marketplace/tools
# and niche interop stay opt-in instead of hitching a ride with every install.
full = [
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
    "tibet-genesis>=0.1.4",
    "tibet-timevector>=0.1.0",
    "tibet-continuityd>=0.6.17",
    "tibet-cap-bus>=0.1.4",
    "tibet-cbom>=0.2.2",
    "tibet-trail>=0.1.1",
    "tibet-wayback>=0.2.1",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-ping>=0.3.4",
    "tibet-overlay>=0.1.2",
    "tibet-mux>=1.0.2",
    "tibet-nc>=0.1.2",
    "tibet-mesh>=0.1.0",
    "tibet-zip>=1.1.1",
    "tibet-pol>=0.3.4",
    "tibet-tail>=0.2.1",
    "tibet-cascade>=0.1.1",
    "tibet-cmail>=0.3.0",
    "tibet-keychain>=0.1.2",
    "tibet-home-agent>=0.5.3",
    "tibet-airlock>=0.3.1",
    "tibet-triage>=0.5.2",
    "tibet-claw>=0.3.2",
    "tibet-cortex>=0.2.1",
    "tibet-sam>=0.1.0",
    "snaft>=1.4.1",
    "tibet-snaft>=1.4.1",
    "inject-bender>=0.3.1",
    "tibet-pqc>=0.1.1",
    "tibet-gateway>=0.4.0",
    "tibet-audit>=0.27.1",
    "tibet-sbom>=0.2.1",
    "tibet-ai-sbom>=0.2.3",
    "tibet-report>=0.1.2",
    "tibet-nis2>=0.1.1",
    "tibet-ci>=0.2.1",
    "tibet-soc>=0.1.1",
    "tibet-workload>=0.1.0",
    "ainternet>=0.9.2",
    "ipoll>=0.2.6",
    "tibet-ainternet-mcp>=0.5.7",
    "tibet-ipoll-mcp>=0.1.0",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-context>=0.2.2",
    "tibet-conformance-vectors>=0.2.2",
    "tibet-triage-mcp>=0.1.0",
    "tibet-pol-mcp>=0.1.0",
]

lab = [
    "tibet-core>=0.5.0",
    "jis-core>=0.4.0",
    "tibet-genesis>=0.1.4",
    "tibet-timevector>=0.1.0",
    "tibet-continuityd>=0.6.17",
    "tibet-cap-bus>=0.1.4",
    "tibet-cbom>=0.2.2",
    "tibet-trail>=0.1.1",
    "tibet-wayback>=0.2.1",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-ping>=0.3.4",
    "tibet-overlay>=0.1.2",
    "tibet-mux>=1.0.2",
    "tibet-nc>=0.1.2",
    "tibet-mesh>=0.1.0",
    "tibet-zip>=1.1.1",
    "tibet-pol>=0.3.4",
    "tibet-tail>=0.2.1",
    "tibet-cascade>=0.1.1",
    "tibet-cmail>=0.3.0",
    "tibet-keychain>=0.1.2",
    "tibet-home-agent>=0.5.3",
    "tibet-airlock>=0.3.1",
    "tibet-triage>=0.5.2",
    "tibet-claw>=0.3.2",
    "tibet-cortex>=0.2.1",
    "tibet-sam>=0.1.0",
    "snaft>=1.4.1",
    "tibet-snaft>=1.4.1",
    "inject-bender>=0.3.1",
    "tibet-pqc>=0.1.1",
    "tibet-gateway>=0.4.0",
    "tibet-audit>=0.27.1",
    "tibet-sbom>=0.2.1",
    "tibet-ai-sbom>=0.2.3",
    "tibet-report>=0.1.2",
    "tibet-nis2>=0.1.1",
    "tibet-ci>=0.2.1",
    "tibet-soc>=0.1.1",
    "tibet-workload>=0.1.0",
    "ainternet>=0.9.2",
    "ipoll>=0.2.6",
    "tibet-ainternet-mcp>=0.5.7",
    "tibet-ipoll-mcp>=0.1.0",
    "tibet-phantom>=0.2.2",
    "tibet-phantom-mcp>=0.1.1",
    "tibet-context>=0.2.2",
    "tibet-conformance-vectors>=0.2.2",
    "tibet-triage-mcp>=0.1.0",
    "tibet-pol-mcp>=0.1.0",
    "tibet-chip>=1.0.1",
    "tibet-forge>=0.7.1",
    "tibet-vault>=0.1.0",
    "tibet-tools>=0.1.1",
    "tibet-marketplace>=0.1.1",
    "tibet-cobol>=0.1.1",
    "tibet-anticheat>=0.1.2",
    "tibet-y2k38>=0.1.2",
    "tibet-iot>=0.1.1",
    "tibet-edge>=0.1.1",
    "tibet-spiffe>=0.1.1",
    "tibet-router>=0.1.2",
    "tibet-snap>=0.1.3",
]

dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://humotica.com"
Documentation = "https://humotica.com/docs/tibet"
Repository = "https://github.com/humotica/tibet"

[project.scripts]
tibet = "tibet.cli:main"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tibet"]
